--- a/alfabet_morsea.ipynb
+++ b/alfabet_morsea.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "## Reprezentacja znaków w formie tekstowej\n",
     "\n",
-    "Jedna kropka odstępu jest tożsama z jedną spacją. Zatem trzy kropki odstępu między znakami będą tożsame trzem spacjom.\n",
+    "Jedna kropka odstępu jest tożsama z jedną spacją. Zatem trzy kropki odstępu między znakami będą tożsame jednej spacji.\n",
     "\n",
     "| Znak | Sygnał        |\n",
     "|------|---------------|\n",
